# TitanSSH

./: .gitignore  AGENTS.md  LICENSE  README.md  components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entitlements/: macOS.entitlements
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: host.rs  mod.rs  monitor.rs  session.rs  sftp.rs
src-tauri/src/core/: mod.rs  monitor_service.rs  monitor_worker.rs  session_manager.rs  sftp_service.rs  ssh_client.rs  terminal_bridge.rs  terminal_service.rs
src-tauri/src/errors/: app_error.rs
src-tauri/src/models/: host.rs  mod.rs  monitor.rs  session.rs  sftp.rs
src-tauri/src/storage/: host_store.rs  mod.rs  secure_store.rs
src/components/home/: HomeQuickActions.vue
src/components/host/: HostEditorDialog.vue  HostList.vue
src/pages/: HomePage.vue
src/stores/: host.ts  layout.ts  monitor.ts  session.ts  sftp.ts  theme.ts
src/test/: file-explorer.component.test.ts  fixtures.ts  home-quick-actions.component.test.ts  homepage.integration.test.ts  host-editor-dialog.component.test.ts  host.store.test.ts  layout.store.test.ts  monitor.lifecycle.test.ts  monitor.store.test.ts  server-status-panel.component.test.ts  session.store.test.ts  sftp-panel.component.test.ts  sftp.store.test.ts  smoke.test.ts  tauri-event-mock.d.ts  terminal-pane.component.test.ts  terminal-tabs.component.test.ts  transfer-queue.component.test.ts  xterm-view.component.test.ts
src/types/: host.ts  monitor.ts  session.ts  sftp.ts
(+10 files in other folders)
