[package]
name = "ssh-terminal-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["Seeker32"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2.3"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
mockall = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
